Add markdown rendering to BlogPost

--- a/src/Pages/BlogPostPage/BlogPostPage.scss
+++ b/src/Pages/BlogPostPage/BlogPostPage.scss
@@ -8,7 +8,8 @@
         }
 
         p {
-            text-align: center;
+            text-align: justify;
+            text-align-last: center;
         }
 
         a {
