--- a/src/Components/ImageSlider/ImageSlider.scss
+++ b/src/Components/ImageSlider/ImageSlider.scss
@@ -8,20 +8,22 @@
     width: 100vw;
     height: 100vh;
 
-    .Image {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .ImageContainer {
+        width: calc(100vw - 32px);
+        height: calc(100vh - 32px);
 
         display: flex;
         align-items: center;
         justify-content: center;
 
         img {
-            padding: 0;
-            margin: -1px -1px -4px -1px;
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain;
         }
     }
 }
