--- a/src/Components/ImageSlider/ImageSlider.scss
+++ b/src/Components/ImageSlider/ImageSlider.scss
@@ -13,14 +13,17 @@
     justify-content: center;
 
     .ImageContainer {
-        width: calc(100vw - 32px);
-        height: calc(100vh - 32px);
+        width: 90vw;
+        height: 90vh;
+
+        padding: 0;
+        margin: 0;
 
         display: flex;
         align-items: center;
         justify-content: center;
 
-        img {
+        img, video {
             max-width: 100%;
             max-height: 100%;
             object-fit: contain;
